fixed IE  backface issue, made blogs flippers with custom thumbnail loading. need to fix main page text not showing.

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -4,3 +4,30 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+@mixin flip-container($w,$h){
+		
+	background-color: transparent;
+	width: $w;
+	height: $h;
+}
+@mixin flip-front(){
+	z-index: 2; 
+	background-repeat: no-repeat;
+	background-position: center;
+}
+@mixin flip-back(){
+	transform: rotateY(180deg);
+}
+
+@mixin flip-front-back($transitiontime){
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	transition: $transitiontime;
+	transform-style: preserve-3d;
+	background-color: #666;
+	backface-visibility: hidden;
+	@include border-radius(20px);
+}
